--- a/src/app/(profile)/components/mobile/MyAnnouncements/GroupsDetails/GroupsDetails.module.scss
+++ b/src/app/(profile)/components/mobile/MyAnnouncements/GroupsDetails/GroupsDetails.module.scss
@@ -413,3 +413,9 @@
 .expandIconRotated {
   transform: rotate(180deg);
 }
+
+.userRequest {
+  font-size: 12px;
+  color: #6b7280;
+  margin-top: 4px;
+}
