--- a/src/components/layouts/Header.module.scss
+++ b/src/components/layouts/Header.module.scss
@@ -118,7 +118,7 @@
   padding: 5px;
   flex-grow: 1;
   max-width: 600px;
-  margin: 0 20px;
+  margin: 0 auto;
 
   @media (max-width: 1024px) {
     margin: 0;
